--- a/writeup/trade_off.tex
+++ b/writeup/trade_off.tex
@@ -78,7 +78,7 @@ My research offers a new perspective, recognizing that, compared to domestic fir
 Such collusive corruption between the government and foreign firm can be the key to explain the puzzle why governments may want to attract a lot of FDI despite the lack of developmental impact. (Corrupt) institutions matter, but not only to \textit{how much} FDI a country can attract as the literature has studied, but also \textit{which kind}.
 
 
-\subsection{Empirical implications and identification strategy}
+\subsection{Road map}
 
 In the sections that follow, I contextualize the general theory presented above, building three mid-level theories that map each of the three parameters to a specific empirical context. I also briefly discuss the identification strategy, leaving more operationalization and data availability details for the later Research Design section.
 
