--- a/writeup/AnhLe_proposal.tex
+++ b/writeup/AnhLe_proposal.tex
@@ -63,16 +63,19 @@
 
 \section{Stylized Facts}
 \input{preliminary_evidence}
+\input{anecdote}
 
 \section{Theory}
 \input{trade_off}
 
-\section{Contextualized theory}
-\input{theory}
-
-
 \section{Research Design}
 \input{research_design}
+\input{rd_potential_for_spillover}
+\input{rd_private_benefit}
+\input{rd_time_horizon}
+\input{two_sided_matching}
+
+\section{Time Line}
 
 \clearpage
 \bibliographystyle{chicago}
