--- a/writeup/research_design.tex
+++ b/writeup/research_design.tex
@@ -1,5 +1,4 @@
-
-\subsection*{Measuring the main dependent variable: spillover effect}
+\subsection{Measuring the main dependent variable: spillover effect}
 \label{sec:measure_spillover}
 
 \subsubsection*{Measuring spillover indirectly}
@@ -22,7 +21,7 @@ Among these channels, \textit{imitation} and \textit{export demonstration} forms
 
 \subsubsection*{Measuring spillover directly}
 
-As standard in the economic literature that studies whether there is a spillover effect for FDI, we can also measure spillover directly. This is done in two steps.
+As standard in the economic literature that studies whether there is a spillover effect for FDI, we can also measure spillover directly. This is done in two steps \citep{VanBeveren2012}.
 
 \begin{itemize}
 \item First, measure the level of technology or productivity of a firm.
@@ -61,70 +60,3 @@ A &= \exp^{\hat\beta_0 + \hat\epsilon_i}
 \end{itemize}
 \end{itemize}
 
-
-
-\subsection{Project 1: Country and Sectoral variation in the ``price'' of spillover}
-
-Recall the hypothesis:
-
-\begin{quote}
-Hypothesis: Government official will pursue less bribe from firms in industries where it is easier to generate spillover
-\end{quote}
-
-As alluded to earlier, the identification strategy of this project is to use the level of spillover in US industries as the instrumental variables for industry-specific characteristics that affect its potential for spillover. Then, I'll use this instrumental variable in hierarchical model using cross-national, cross-sectoral data.
-
-To measure corruption, presence of FDI, and treatment of firms across countries, I utilize the World Bank's Enterprise Survey (ES), which includes a wealth of firm-level data across 125 countries, spanning various topics from investment, labor, to business-government relation \citep{WorldBank2015}. The Enterprise Survey uses stratified random sampling (using three strata: firm size, business sector, and region) in order to ensure representativeness. The survey data comes from face-to-face interviews with upper management and is anonymized to ensure confidentiality at all times.\footnote{For more on the methodology of the Enterprise Survey, visit \url{http://www.enterprisesurveys.org/methodology}} This dataset has a wealth of firm-level data that helps us operationalize key concepts as detailed below.
-
-Operationalization of variables:
-\begin{itemize}
-\item FDI spillover: See \Cref{sec:measure_spillover}. The level of FDI by sectors is available via the Enterprises Survey dataset.\footnote{It would be better if there is UNCTAD data for FDI by sector, since the Enterprize Survey is not designed to account for all FDI inflow. Without weights, it is difficult to accurately get the population of foreign firms from the ES' sample of foreign firms.}
-
-\item Corruption: can be measured in two ways. 1) Firms' perception about corruption as an obstacle. This measure is frequently used but is not accurate since firms' perception of corruption depends not only on the level of corruption but also the characteristics of firms. 2) Hard measure of prevalence and depth of bribes, e.g. ``Was an informal payment expected or request (when applying for a license)?'', ``How much do establishments like this one give in informal payments?'' 
-\end{itemize}
-
-\subsection{Project 2: OECD's anti-bribery convention raising the cost of bribery}
-
-Recall the hypothesis:
-
-\begin{quote}
-Hypothesis: The Phase 3 (Enforcement) of OECD's Anti-Bribery Convention causes firms from member countries to have more spillover and pay less bribe.
-\end{quote}
-
-As discussed, the identification strategy is to use the enforcement of the ABC as an exogenous shock to the cost of bribing of foreign firms in Vietnam. FDI data in Vietnam comes from the Vietnam's Enterprise Census, an annual census on the operation of all enterprises in Vietnam.
-
-This project also takes advantage of the list experiment by \citet{Malesky2015} to measure the level of bribery more accurately as firms feel safer about disclosing corrupt activities. Indeed, asking directly about firms' experience with corruption is unlikely to get an accurate answer due to sensitivity bias \citep{Coutts2011}. Researchers, including the ES team, often address this problem by framing the question about the experience with corruption of ``firms like yours.'' However, with this technique, firms may not read between the lines and actually answer about the experience of others \citep{Ahart2004}.
-
-The unmatched count technique used in \citet{Malesky2015}, circumvents these issues and provide a more accurate measure of corruption.
-
-\subsection{Project 3: Vietnamese provincial officials' time horizon}
-
-Recall the hypothesis:
-
-\begin{quote}
-In provinces whose leaders are in their last term before the mandated retirement age, there are more spillover and less bribe from the foreign firms.
-\end{quote}
-
-The identification strategy is a fuzzy regression discontinuity with the last term before retirement serving as the break point.
-
-In addition, this project also attempts to measure the preference of the official directly with a survey conjoint analysis instead of relying on observed level of bribe and spillover. This design is important for my theory, in which the crucial causal mechanism is the utility calculation of provincial officials, which weighs between the developmental impact and the potential for bribes of FDI. It is difficult to fully examine this key step with only observational data because what officials truly want may not be fulfilled due to external factors and thus cannot be observed. Furthermore, what an official wants from a FDI firm is often hard to tease out completely. A big FDI firm is an attractive source of bribe, but it also brings job and technology. Indeed, perhaps this high correlation is precisely why it is so easy for officials to extract bribe from FDI under the guise of promoting economic development.
-
-To truly get at the utility calculation of provincial officials, I plan to conduct a survey experiment using conjoint analysis to ask provincial officials about their preference between two hypothetical FDI firms \citep{Hainmueller2014}. The characteristics of these firms will be randomly varied across several dimensions: size of labor force, capital, technology age, and most importantly, need for land, which proxies for corruption opportunities.
-
-\subsubsection{Why choose land as a proxy for corruption?}
-
-To discern provincial officials' preference for corruption opportunity versus developmental impact, one must vary the hypothetical FDI project along a characteristic that can only be attractive to officials because of its potential for corruption and not any other reasons. In this regard, the amount of land a project requires is the best proxy for corruption. Since land is an increasingly scarce and expensive resource in Vietnam, acquiring land from current tenants and farmers is a difficult, sometimes violent, process. Therefore, there is neither good developmental nor political reason for local officials to prefer a project that needs a large amount of land. 
-
-In contrast, other characteristics of a FDI project can be preferred by officials for many different reasons. For example, a well capitalized project may signify a large pot of money to dip in, but it may also be attractive for the labor productivity enhancing effect of its capital. Similarly, a FDI firm with a large labor force may need to curry favor with officials to suppress their workers, but it may also be appealing for the jobs it creates.  Unlike those factors, land is unambiguously an indication of corruption opportunities. With a high level of \textit{monopoly} and \textit{discretion}, local officials are able to sell land access, something that investors are eager to buy.
-
-1) Monopolistic control over land supply: At the start of Vietnam's liberalization (under Land Law 1993), any exchange of land between land users and investors must go through the local government. Investors had to negotiate with all levels of local governments (i.e. commune, district, and province level people's committees) to acquire land---a complex process that encouraged investors to use informal procedures and fees to expedite. Importantly, the price of land was solely determined by the local government, which was usually 10-30\% of the market price. Therefore, officials were able to extract bribes with both their gate-keeping and price-setting powers over land.
-
-Subsequent land law reforms (2003 and 2013) attempted to bring the land acquisition process closer to a market approach and lessen the monopolistic control of the local government over land. For example, Land Law 2003 specified two methods for investors to acquire lands: voluntary and compulsory. Under compulsory land acquisition (akin to eminent domain), local governments retain the power to acquire land with compensation then allocate to approved investors. Under the newly-introduced voluntary land acquisition, investors negotiate with and buy from land users in a private market transaction. Despite the option of buying lands from private users, in practice most investment projects tellingly opted for compulsory land acquisition by the state. With the local government's coercive power and legal ability to set compensation value on their side, investors find compulsory land acquisition both faster and cheaper, and thus worth paying for.
-
-Similarly, despite many calls for removing the state's control over land, Land Law 2013 disappointed with its insistence on ``people's ownership'' of land instead of adopting a fully private ownership system. Furthermore, the law preserves the state's right to acquire land for the vaguely defined ``socioeconomic development'' and ``national interest,'' which expansively includes the development of industrial zones.
-
-2) Discretionary allocation of land to selected investors: Opportunities for corruption also arise from two discretionary powers of the local governments. First, land acquired by the government is allocated directly to approved investors instead of through public auction, an option allowed by law but rarely practiced by local governments. Second, in many cases, local officials even modify the existing land use plans according to the suggestions of investors, making available land that was previously not zoned for business development. Without any standard guideline for investor approval, this process relies heavily on personal contacts and is prone to bribery and kickback.
-
-An important symptom of this corrupt practice is the lack of transparency in the land allocation process and decision. Key information, such as the criteria of project approval, the shortlist of investors, the profile of the selected projects and investors, and the (dictated) price of land, are kept among selected investors and a few state officials involved. Even a straightforward compliance with transparency regulation, i.e. the public posting of investment site maps, is not fulfilled. In a 2010 study, DEPOCEN researchers could only access the investment site maps in 2 of the 12 visited provinces \citep{Anderson2011}.\footnote{But Land law 2013 does remove the direct allocation of land to approved project, instead try to increase the number of land auctions. Does this have an effect?}
-
-\subsubsection{Conjoint analysis design}
-\input{conjoint_experiment}
