add some defense for not having firm as the strategic actor

--- a/writeup/AnhLe_proposal.tex
+++ b/writeup/AnhLe_proposal.tex
@@ -69,11 +69,11 @@
 \input{trade_off}
 
 \section{Research Design}
-\input{research_design}
+\input{measuring_spillover}
 \input{rd_potential_for_spillover}
 \input{rd_private_benefit}
 \input{rd_time_horizon}
-\input{two_sided_matching}
+\input{rd_two_sided_matching}
 
 \section{Time Line}
 
