--- a/writeup/rd_potential_for_spillover.tex
+++ b/writeup/rd_potential_for_spillover.tex
@@ -1,11 +1,11 @@
-\subsection{``Price'' of spillover: sectoral and industry variation in potential for spillover}
+\subsection{``Price'' of spillover: sectoral variation in potential for spillover}
 
 As implied in the theory section, when the ``price'' of spillover is high (i.e. it is difficult to obtain spillover due to the country's absorptive capacity or sector-specific characteristics), the government official would choose a bundle that has more private benefit than spillover (\Cref{fig:price_of_spillover}). 
 
 \begin{figure}[!ht]
 	\centering
     \includegraphics[width=0.75\textwidth, height=0.75\textheight,keepaspectratio]{../figure/price_of_spillover}
-    \caption{As the ``price'' of spillover decreases, the official can get a larger amount of spillover given the same budget (i.e. the y-intercept of the budget constraint shifts up) Comparing the bundle $(s_1, b_1)$ and $(s_2, b_2)$, we see that the new bundle has more spillover and less bribe.}
+    \caption{As the ``price'' of spillover decreases, the official can get a larger amount of spillover given the same budget (i.e. the y-intercept of the budget constraint shifts up) Comparing the bundle $(s_1, b_1)$ and $(s_2, b_2)$, we see that the new bundle has more spillover and fewer bribes.}
     \label{fig:price_of_spillover}
 \end{figure}
 
@@ -14,10 +14,10 @@ Here I focus on industry-specific characteristics that either facilitate or hind
 This leads us to the following hypothesis:
 
 \begin{quote}
-Hypothesis: Government official will pursue less bribe from firms in industries where it is easier to generate spillover
+Hypothesis: Government officials will pursue fewer bribes from firms in industries where it is easier to generate spillovers
 \end{quote}
 
-While such variation across industries is clear conceptually, measurement is thorny given the many factors that can affect the potential for spillover. In addition, there is an endogeneity problem as the potential for spillover may itself be affected by the level of corruption in that industry. For example, an industry plagued by collusive relationship between the official and foreign firms does not offer an enabling environment that allows private firms to develop their absorptive capacity. The endogeneity problem is compounded if the official strategically decides whether to invest and improve absorptive capacity, in which case it is not even clear which direction is our estimate biased.
+While such variation across industries is clear conceptually, measurement is thorny given the many factors that can affect the potential for spillover. In addition, there is an endogeneity problem as the potential for spillover may itself be affected by the level of corruption in that industry. For example, an industry plagued by collusive relationship between the official and foreign firms does not offer an enabling environment that allows private firms to develop their absorptive capacity. The endogeneity problem is compounded if the official strategically decides whether to invest and improve absorptive capacity, in which case it is not even clear in which direction is our estimate biased.
 
 To address both of these measurement and endogeneity issues, I will use the variation in technological spillover across industries in the United States as the instrumental variable.\footnote{The United States is considered due to its high quality economic data. Alternatively, for each country, I can use a comparable country in the same region or the same developmental stage to formulate the instrument} The assumption is that the level of technological spillover in a US industry only correlates with the level of bribe in another country's industry through the latent factor that is the industry-specific potential for spillover.
 
