--- a/writeup/trade_off.tex
+++ b/writeup/trade_off.tex
@@ -1,10 +1,15 @@
 \subsection{Actor and choices}
 
-The model has one strategic actor: a government official. This official has control over a certain endowment (e.g. market access, cheap labor) that is attractive to foreign firms.\footnote{I define  \textit{foreign firms} as firms with over 50\% ownership belonging to private foreign individuals, companies, or organizations} Foreign firms that invest in the official's territory turn this endowment into profit via their productive activities. Firms then share the value added with the official in exchange for access to the endowment. 
+The model has one strategic actor: a government official. This official has control over a certain endowment (e.g. market access, cheap labor) that is attractive to foreign firms.\footnote{I define \textit{foreign firms} as firms with over 50\% ownership belonging to private foreign individuals, companies, or organizations. In these firms, we are certain that the foreign owner has the majority stake and is responsible for the firm's action. This definition is common across business surveys and national laws, allowing us to collect a wide range of data.} Foreign firms that invest in the official's territory turn this endowment into profit via their productive activities. Firms then share the value added with the official in exchange for access to the endowment. 
 
-Firms share the benefit with the official in the form of a two-good bundle: 1) technological spillover and, 2) private benefit (to the official). \textit{Technological spillover} is the beneficial effects of foreign firms' technological knowledge on the productivity and innovative ability of private firms. The official cares about the technological spillover of FDI because it is a crucial ingredient in improving total factor productivity and generating long-term growth, which in turn, brings electoral or career benefits. \textit{Private benefit} that firms offer to the official can come in many forms, both illegal (e.g. bribe, kickback) and legal (e.g. campaign finance contribution, informal network with foreign firms that leads to contracts for friends and families).
+Firms share the benefit with the official in the form of a two-good bundle: 1) technological spillover and, 2) private benefits (to the official). \textit{Technological spillover} is the beneficial effects of foreign firms' technological knowledge on the productivity and innovative ability of domestic firms. The official cares about the technological spillover of FDI because it is a crucial ingredient in improving total factor productivity and generating long-term growth, which in turn, brings electoral or career benefits. \textit{Private benefits} that firms offer to the official can come in many forms, both illegal (e.g. bribe, kickback) and legal (e.g. campaign finance contribution, informal network with foreign firms that leads to contracts for friends and families). The essence of the dissertation project is to determine how the official chooses the mix of these two goods, i.e. technological spillover and private benefit.
 
-The essence of the dissertation project is to determinte how the official chooses the mix of these two goods, i.e. technological spillover and private benefit.
+In this model, the firm does care about whether the official demands spillover or private benefits but only because firms have heterogeneous abilities in offering spillover and private benefits. For example, if a firm belongs to an industry where production is divisible, it is easier and less expensive for the firm to sub-contract local firms and create spillover. Similarly, if a firm comes from a country with little corruption, it may be less adept in dealing with the official, has to hire local agents, and thus find it more expensive to offer the same amount of private benefits than other firms that are familiar with corrupt dealings. I model this preference of firm via two parameters: the ``price'' of spillover and the ``price'' of private benefit, which the official has to consider when he demands one of the two goods from the firm. By doing so, my model is able to incorporate the firm's preference without introducing it as a strategic actor.
+
+This model does have two assumptions. First, I assume that offering spillover or private benefits does not affect the firm's utility other than through the bottom line. If we believe that firms are unlikely to have moral (or other non-financial) incentives to bring spillover or to withhold bribe, then this assumption is reasonable. 
+
+Second, I assume that the firm is satisfied as long as its retained profit remains above the reservation level. The firm will not invest if and only if the official's demand reduces its profit to below this level. This assumption is reasonable according to the behavioral model of firms, in which firms are profit-satisficing instead of profit-maximizing \citep{Simon1959}. Granted, it is less defensible to build a model with one actor satisficing (the firm) while the other maximizing (the official). Therefore, in an extension to my project, I will model both actors as utility maximizing and use two-sided logit (TSL) to estimate their preferences. \citet{Logan1996a} has shown that the TSL corresponds to the game-theoretic college admissions model, a many-to-one matching problem that is relevant to how countries and FDI firms find their match.
+
 
 \subsection{Government official faces a budget constraint}
 
@@ -18,7 +23,7 @@ One may argue that there are foreign firms that voluntarily produce spillover an
 
 Combining the two facts that, 1) the size of the bundle is limited by the official's endowment, and 2) the official has to give up one good to get more of the other from firms, a budget constraint exists over this two-good bundle.
 
-While FDI does bring other benefits, e.g. jobs and capital, the theory intentionally focuses on technological spillover and private benefit for both substantive and theoretical reasons. Substantively, technological spillover increases total factor productivity, which is key to sustaining long-term economic growth when capital has diminishing return. While the literature has mainly focused on the quantity of FDI attracted, development agencies and governments have paid much attention to the issue of technological spillover. 
+While FDI does bring other benefits, e.g. jobs and capital, the theory intentionally focuses on technological spillover and private benefits for both substantive and theoretical reasons. Substantively, technological spillover increases total factor productivity, which is key to sustaining long-term economic growth when capital has diminishing return. While the literature has mainly focused on the quantity of FDI attracted, development agencies and governments have paid much attention to the issue of technological spillover. 
 
 Furthermore, the implication of a spillover-vs-private-benefit trade-off is very different from that of a spillover-vs-capital/job trade-off. In the later case, one can count on the official to shift towards attracting FDI with high technological spillover as his country gradually grows and is in less immediate need of capital and job creation. The growth trajectory of a country is guaranteed to be positive in this scenario, fueled by FDI's capital injection in the earlier stage and sustained by FDI's technological transfer in the later stage. However, if the trade-off that the official considers is between spillover and private benefit as my project theorizes, then one cannot count on the official to take such benevolent action.
 
@@ -26,7 +31,7 @@ Theoretically, since technological spillover is key to growth, my theory about t
 
 \subsection{Parameter 1: Official's endowment determines the size of the budget constraint}
 
-Since the official uses his endowment to attract FDI, with more endowment the official will be able to get both more technological spillover and more private benefits. In other words, his budget constraint will shift to the right (\Cref{fig:budget_constraint}). This feature of the model captures the fact that officials in a country with a lot of endowment have a much better bargaining leverage vis-a-vis the foreign firms and can extract both spillover and private benefit (e.g. China).
+Since the official uses his endowment to attract FDI, greater endowments will engender both more technological spillover and more private benefits. In other words, his budget constraint will shift to the right (\Cref{fig:budget_constraint}). This feature of the model captures the fact that officials in a country with a lot of endowment have a much better bargaining leverage vis-a-vis the foreign firms and can extract both spillover and private benefit (e.g. China).
 
 \begin{figure}[!ht]
 	\centering
