--- a/writeup/empirical_puzzle.tex
+++ b/writeup/empirical_puzzle.tex
@@ -1,4 +1,4 @@
-In recent decades, foreign direct investment (FDI) global flow has steadily increased, rising to over \$1.5 trillion dollars in 2014. For developing countries, FDI flow is also remarkably robust to global downturn, leading to enthusiastic endorsement by major international organizations as a key factor to economic development (\Cref{fig:globalfdi}) \citep{Mallampally1999, WorldEconomicForum2013}. This assumption is also shared widely within political science, where much of the literature starts with the assumption that countries want to seek FDI for its many benefits. The question that these works focus on is \textit{how} countries can attract FDI, not \textit{why} they want to do so \citep{Jensen2003, Li2003, Li2006, Ahlquist2006}.\footnote{Two recent exceptions are \citet{Pinto2013, Pandya2013}, which are the first to investigate the demand for FDI.} 
+In recent decades, foreign direct investment (FDI) global flow has steadily increased, rising to over \$1.5 trillion dollars in 2014. For developing countries, FDI flow is also remarkably robust to global downturns, leading to enthusiastic endorsement by major international organizations as a key factor to economic development (\Cref{fig:globalfdi}) \citep{Mallampally1999, WorldEconomicForum2013}. This assumption is also shared widely within political science, where much of the literature starts with the assumption that countries seek FDI for its many benefits. These works focus on \textit{how} countries can attract FDI, not \textit{why} they want to do so \citep{Jensen2003, Li2003, Li2006, Ahlquist2006}.\footnote{Two recent exceptions are \citet{Pinto2013, Pandya2013}, which are the first to investigate the demand for FDI.} 
 
 \begin{figure}[!ht]
 \includegraphics[width=\textwidth, height=\textheight,keepaspectratio]{../figure/global_fdi}
@@ -6,11 +6,11 @@ In recent decades, foreign direct investment (FDI) global flow has steadily incr
 \label{fig:globalfdi}
 \end{figure}
 
-Underlying this mode of thinking is the assumption that FDI brings various benefits to developing countries, including capital and employment. However, the more important promise that FDI holds to growth is the spillover of productivity between foreign firms and domestic firms. As well-known from neoclassical growth theory, the diminishing return to capital will at one point stop capital from accumulating further, preventing long-run economic growth from being permanently driven by capital accumulation alone \citep{Solow1956}. Therefore, long-run growth ultimately requires technological innovation, of which FDI is potentially an important source.
+Underlying this mode of thinking is the assumption that FDI brings various benefits to developing countries, including capital and employment. However, the more important promise that FDI holds to growth is the spillover of productivity from foreign firms to domestic firms. As well-known from neoclassical growth theory, diminishing returns to capital will at one point stop capital from accumulating further, preventing long-run economic growth from being permanently driven by capital accumulation alone \citep{Solow1956}. Therefore, long-run growth ultimately requires technological innovation, which FDI can supply.
 
 This insight implies that FDI cannot promote the host country's growth simply from the amount of capital it brings. Scholars have confirmed that FDI can only have a growth-enhancing impact if there is technological spillover from the foreign to the domestic sectors \citep{Nunnenkamp2004}. This empirical finding provides support for \citet{Findlay1978}'s groundbreaking model of FDI and growth, in which technology spillover from foreign firms shift the domestic factor-price frontier to the right, allowing more output from the same input, resulting in higher profits and higher wages (i.e. higher savings) for the domestic sector. This ultimately leads to a continually increasing domestic capital stock. In this view, FDI is welfare-enhancing, providing spillover benefits to the local firms in ways that foreign firms do not take into account in their private calculations. This provides the justification for countries' using investment incentives to rectify the undersupply of FDI, closing the gap between private and social returns. 
 
-Despite this prevailing view about the importance of FDI in providing technological spillover, there is little conclusive evidence of FDI having a positive effect on growth \citep{Nair-Reichert2001, Carkovic2002} or poverty reduction \citep{Guerra2009} (\Cref{fig:fdipoverty}). A substantial literature has developed to explain this puzzle, concluding that the growth-enhancing and spillover effect of FDI is conditional on the absorptive capacity of local firms. Cross-nationally, scholars find that FDI is more likely to have a positive growth effect when the technological gap between the local and foreign firms are small \citep{Nunnenkamp2004} and when host countries have strong financial and institutional development \citep{ Durham2004}. Similarly, absorptive capacity, measured by the level of schooling in host economy, conditions the transfer of technology between foreign and local firms across regions in China \citep{Fu2008} and countries in Latin America \citep{Willem2004}.
+Despite this prevailing view about the importance of FDI in providing technological spillover, there is little conclusive evidence of FDI having a positive effect on growth \citep{Nair-Reichert2001, Carkovic2002} or poverty reduction \citep{Guerra2009} (\Cref{fig:fdipoverty}). A substantial literature has developed to explain this puzzle, concluding that the growth-enhancing and spillover effect of FDI is conditional on the absorptive capacity of local firms. Cross-nationally, scholars find that FDI is more likely to have a positive growth effect when the technological gap between the local and foreign firms is small \citep{Nunnenkamp2004} and when host countries have strong financial and institutional development \citep{Durham2004}. Similarly, absorptive capacity, measured by the level of schooling in the host economy, conditions the transfer of technology between foreign and local firms across regions in China \citep{Fu2008} and countries in Latin America \citep{Willem2004}.
 
 \begin{figure}[!ht]
 \includegraphics[width=\textwidth, height=\textheight,keepaspectratio]{../figure/fdi_poverty}
