first draft done

--- a/writeup/AnhLe_proposal.tex
+++ b/writeup/AnhLe_proposal.tex
@@ -38,6 +38,7 @@
 \newtheorem{prop}[thm]{Proposition}
 \newtheorem{cor}[thm]{Corollary}
 \newtheorem{conj}[thm]{Conjecture}
+\newtheorem{hyp}{Hypothesis}
 
 \DeclareMathOperator{\id}{id}
 
@@ -76,6 +77,10 @@
 \input{rd_two_sided_matching}
 
 \section{Time Line}
+\input{time_line}
+
+\appendix
+\input{appendix_tsl}
 
 \clearpage
 \bibliographystyle{chicago}
