--- a/writeup/measuring_spillover.tex
+++ b/writeup/measuring_spillover.tex
@@ -34,7 +34,7 @@ Level of productivity: Consider the familiar Cobb-Douglas production function:
 Y &= AL^{\alpha}K^{\beta}
 \end{align}
 
-where $Y$ is value added, $A$ is total-factor productivity (TFP), $L$ is labor, and $K$ is capital. $y$, $L$, and $K$ are observable, while $A$ is not. Log transform both sides of the equation, we attain a linear form:
+where $Y$ is value added, $A$ is total-factor productivity (TFP), $L$ is labor, and $K$ is capital.\footnote{This is a structural equation and thus does not have an error term.} $y$, $L$, and $K$ are observable, while $A$ is not. Log transform both sides of the equation, we attain a linear form:
 
 \begin{align} \label{eq:cobb_douglas_linear}
 y &= a + \alpha l + \beta k
