--- a/writeup/trade_off.tex
+++ b/writeup/trade_off.tex
@@ -6,22 +6,18 @@ Firms share the benefit with the official in the form of a two-good bundle: 1) t
 
 In this model, the firm does care about whether the official demands spillover or private benefits but only because firms have heterogeneous abilities in offering spillover and private benefits. For example, if a firm belongs to an industry where production is divisible, it is easier and less expensive for the firm to sub-contract local firms and create spillover. Similarly, if a firm comes from a country with little corruption, it may be less adept in dealing with the official, has to hire local agents, and thus find it more expensive to offer the same amount of private benefits than other firms that are familiar with corrupt dealings. I model this preference of firm via two parameters: the ``price'' of spillover and the ``price'' of private benefit, which the official has to consider when he demands one of the two goods from the firm. By doing so, my model is able to incorporate the firm's preference without introducing it as a strategic actor.
 
-This model does have two assumptions. First, I assume that offering spillover or private benefits does not affect the firm's utility other than through the bottom line. If we believe that firms are unlikely to have moral (or other non-financial) incentives to bring spillover or to withhold bribe, then this assumption is reasonable. 
+This model has two assumptions. First, I assume that offering spillover or private benefits does not affect the firm's utility other than through the bottom line. If we believe that firms are unlikely to have moral (or other non-financial) incentives to bring spillover or to withhold bribe, then this assumption is reasonable. 
 
 Second, I assume that the firm is satisfied as long as its retained profit remains above the reservation level. The firm will not invest if and only if the official's demand reduces its profit to below this level. This assumption is reasonable according to the behavioral model of firms, in which firms are profit-satisficing instead of profit-maximizing \citep{Simon1959}. Granted, it is less defensible to build a model with one actor satisficing (the firm) while the other maximizing (the official). Therefore, in an extension to my project, I will model both actors as utility maximizing and use two-sided logit (TSL) to estimate their preferences. \citet{Logan1996a} has shown that the TSL corresponds to the game-theoretic college admissions model, a many-to-one matching problem that is relevant to how countries and FDI firms find their match.
 
 
-\subsection{Government official faces a budget constraint}
+\subsection{The trade-off between spillover and private benefits}
 
-There are two reasons why there exists a budget constraint that prevents the official from getting as much spillover and private benefit as he wants.
-
-First, since the endowment that the official commands is finite, it imposes a constraint on the amount of FDI that the official can attract.
-
-Second, given a fixed amount of FDI, there is a trade-off between spillover and private benefit. In other words, if the official wants more of one good, he has to give up some of the other. To induce spillover, governments frequently impose on foreign firms conditions such as forming a joint venture or local content requirement. These conditions constrain firms' options and their ability to optimally use their physical and management capital, reducing their revenue and profitability. Similarly, when firms are forced to offer private benefit to officials (e.g. bribes, contracts with officials' relatives), they suffer from both an upfront cost as well as the cost of uncertainty (as these private benefits are frequently informal, not transparently encoded, and thus abstruse to foreign firms). For this reason, offering officials private benefit increases firms' expenses and thus also reduces profitability. Given that firms are constrained to maintain a minimum amount of profit (akin to reservation wage) that justifies investing in the country, if a firm offers more private benefit to the official it will have to bring less technological spillover, and vice versa.
+To induce spillover, governments frequently impose on foreign firms conditions such as forming a joint venture or local content requirement. These conditions constrain firms' options and their ability to optimally use their physical and management capital, reducing their revenue and profitability. Similarly, when firms are forced to offer private benefit to officials (e.g. bribes, contracts with officials' relatives), they suffer from both an upfront cost as well as the cost of uncertainty (as these private benefits are frequently informal, not transparently encoded, and thus abstruse to foreign firms). For this reason, offering officials private benefit increases firms' expenses and thus also reduces profitability. Given that firms are constrained to maintain a minimum amount of profit (akin to reservation wage) that justifies investing in the country, if a firm offers more private benefit to the official it will have to bring less technological spillover, and vice versa.
 
 One may argue that there are foreign firms that voluntarily produce spillover and this is not mutually exclusive from offering private benefit to the officials. However, such cases are rare because high-tech firms want to keep their technology proprietary. Due to scale and sophistication, foreign firms would also source from established international suppliers and only rely on local suppliers for standard commodity goods at arms-length, which doesn't generate as much spillover as personal contact (e.g. training, quality assurance assistance, financing assistance). FDI firms voluntarily source from local suppliers only when the availability and quality of local suppliers are not far from international quality, and in these cases there's less need and room for spillover. Another scenario that leads to foreign firms voluntarily producing spillover is when they specifically target the local market: in this case, the qualilty requirement is not too stringent, the quantity not too large, and there is a need for rapid local customization. However, in this case, market oriented FDI firms can displace local firms, and the benefit of spillover is offset and can lead to negative spillover \citep{Mody2004}.
 
-Combining the two facts that, 1) the size of the bundle is limited by the official's endowment, and 2) the official has to give up one good to get more of the other from firms, a budget constraint exists over this two-good bundle.
+Given that offering either spillover or private benefits cut into the firm's profit, and that the firm's profit is finite, the official can only have more of one good if he has less of the other. In other words, there is a trade-off between spillover and private benefits, and the official faces a budget constraint over this two-good bundle.
 
 While FDI does bring other benefits, e.g. jobs and capital, the theory intentionally focuses on technological spillover and private benefits for both substantive and theoretical reasons. Substantively, technological spillover increases total factor productivity, which is key to sustaining long-term economic growth when capital has diminishing return. While the literature has mainly focused on the quantity of FDI attracted, development agencies and governments have paid much attention to the issue of technological spillover. 
 
