--- a/writeup/rd_two_sided_matching.tex
+++ b/writeup/rd_two_sided_matching.tex
@@ -1,39 +1,100 @@
-\subsection{Two-sided Matching}
+\subsection{Two-sided logit (TSL) model}
 
-``A two-sided approach explicitly combining models of employers' and workers' preferences, together with data on the characteristics or resources that each side values in the other, therefore provides an attractive and direct representation of the determinants of employment opportunity and choice.''
+Designed to model the job market, the TSL is ``a two-sided approach explicitly combining models of employers' and workers' preferences, together with data on the characteristics or resources that each side values in the other, therefore provides an attractive and direct representation of the determinants of employment opportunity and choice.'' I will show how to frame the FDI investment location in this framework, where the firm chooses the official based on his endowment and the official chooses the firm based on its ability to deliver spillover and private benefits. Extending my previous model, the TSL allows the firm to be profit-maximizing instead of profit-satisficing. Furthermore, both sides are also strategic, taking into account not only their own preferences but also offers from the other sides \citep{Logan1996a}.
 
-While the previous model simplifies the strategic game by having the government official as the only strategic actor, we can improve the model by having the firm to be a profit maximizing actors as well.
+To use the TSL model, I first categorize officials according to the length of their time horizon. Then, for each category, I estimate the preference of the official for spillover versus private benefits. The hypothesis is that officials with a longer time horizon prefer spillover. The necessary data is which firm invest in which country and the relevant characteristics of firms and countries.
 
-In this regards, firms and governments both have separate preferences parameters, and they will choose the option that offers the highest utility.
+In the following pages, \Cref{sec:tsl_actor_utility} specifies the actors' utility functions. \Cref{sec:tsl_estimate} discusses how the TSL model is derived from these utility functions and how it can be estimated. Finally, \Cref{sec:tsl_hypothesis} elaborates on the hypotheses and how to operationalize them for testing.
 
-The model is as follows:
+\subsubsection{The actors' utility function}
+\label{sec:tsl_actor_utility}
 
-- The government makes a bunch of offers to firms, if the utility of offering employment is higher than not offering employment
-- The firm will consider all the options and pick the option that provides the highest utility
 
-TSL is related to college admission model (Roth and Sotomayer 1990), many-to-one matching problems. A country can make an offer to many firms, if these firms give a high enough utility to the country. (Note the assumption of the firm investing in only a country here. This assumption is okay if we think of different parts of a firm as different entities, this is valid modeling anyway because different parts of the firms may have different levels of potential for spillover and propensity to bribe)
+Using the notation from \citet{Logan1998}, we consider the utility function of the two actors, the official and the firm. For the official $j$, the utility of having firm $i$ investing in his country is:\footnote{Since there is only one official in a country, in this section I will refer to country $j$ and official $j$ interchangeably.}
 
-(There is also no explicit quota in the slots offered by the countries in the TSL model. But this is okay if we consider that the country have more slots than they have firms applying to, which is reasonable given how the countries keep attracting firms and there doesn't seem to be a hard limit)
+\begin{align}
+U_j(i) &= \beta_j x_i + m_j + \epsilon_{1ij} \\
+\end{align}
 
-\subsubsection{Hypothesis}
+while the utility of not having firm $i$ investing is:
 
-In this framework, the parameters in the model become the covariates of the two actors. Specifically, the government official has time horizon, pressure for jobs (i.e. left leaning), population growth 20 years ago, gdp per capita (proxy for level of capital stock). The firm will have variables like potential for spillover (by sector type), propensity to bribe (by country of origin), amount of capital, amount of jobs, relationship between host country and home country.
+\begin{align}
+U_j(\neg i) &= b_j + \epsilon_{0ij}
+\end{align}
 
-From pablo pinto: left (DPI) x political constraint (Henisz) 
+where
 
-Data: BEA's data of US firms investing abroad
-Data: PCI Vietnam: firms and provinces choose each other. The official would have time horizon
+\begin{align*}
+\beta_j &= \text{a vector of official $j$'s preference for relevant characteristics of firms} \\
+x_i &= \text{a vector of firm $i$'s measured values on those characteristics} \\
+b_j &= \text{the baseline utility of official $j$ without any firm investing} \\
+\epsilon_{1ij}, \epsilon_{0ij} &= \text{unobserved components that influence official $j$'s utility}
+\end{align*}
 
-\subsubsection{The two-sided logit (TSL) model}
+The official $j$ will evaluate each firm and then make an offer to firm $i$ to invest if $U_j(i) > U_j(\neg i)$. In our model, the relevant firm characteristics (i.e. $x_i$) that the official will consider are: the potential for spillover, private benefits, jobs, and capital. The corresponding $\beta$'s represent the official's preference for these characteristics. We are mainly interested in the $\beta$'s for spillover and private benefit.
 
-Intuition: If we have the complete data of all offers from all countries to all firms, we would have been able to figure out the preference.
+On the other side, for firm $i$, the utility of investing in country $j$ is:
 
-In real data, we may not have this complete data, only data where firms have already chosen a country.
+\begin{align}
+V_i(j) &= \alpha_i w_{ij} + v_{ij}
+\end{align}
 
-EM algorithm allows us to find the hidden parameters by iteratively run as follows. First, assume some values for the parameters. Then, calculate the likelihood of the label assignment. Then based on the label assignment, calculate new values for the parameters.
+where
 
-We don't know the preference, nor all the offers. So we assume some params values for the preference, fill in the offersn, then calculate the preference again. Rinse and repeat.
+\begin{align*}
+\alpha_i &= \text{a vector of firm $i$'s preference for relevant characteristics of countries} \\
+w_{ij} &= \text{a vector of country $j$ measured values on those characteristics} \\
+v_{ij} &= \text{unobserved component that influences firm $i$'s utility}
+\end{align*}
 
-Of course there is the problem of local maximum, meaning that we are not guaranteed to find the best fit. The solution is to try different random start to see if they converge to the same point.
+Firm $i$ evaluates all the countries that make an offer and chooses the one that brings the highest utility. In our model, the relevant country characteristics that the firm will consider are: labor quality, infrastructure, and market size.
 
-\subsubsection{Data}
+\subsubsection{Estimate the actors' preference}
+\label{sec:tsl_estimate}
+
+We estimate the preference of firms and officials with a maximum likelihood estimator. We want to find the parameters that maximize the likelihood of the observed data, which is a series of matches between firms and countries. This likelihood is:
+
+\[
+L = \prod_{i,j: \text{i is matched with j}} Pr(A_{ij})
+\]
+
+where $Pr(A_{ij})$ is the probability of a specific match between firm $i$ and country $j$:
+
+\begin{align}
+&Pr(A_{ij}) \\
+&= \sum_{k=1}^R Pr(A_{ij}|S_{ik}) Pr(S_{ik}) \\
+&= \sum_{k=1}^R Pr(A_{ij} | S_{ik}) \prod_{m \in O_k} Pr(o_{im} = 1) \prod_{n \in \bar O_k} Pr(o_{in} = 0) \\
+&= \sum_{k:j \in O_k} \frac{\exp(\alpha w_{ij})}{\displaystyle\sum_{h \in O_k} \exp(\alpha w_{ih})} \prod_{m \in O_k, m > 0} \frac{\exp(\beta x_{i})}{1 + \exp(\beta x_i)} \\
+&\times \prod_{n \in \bar O_k, n > 0} \frac{1}{1 + \exp(\beta x_i)}
+\end{align}
+
+Here, the term $Pr(o_{ij} = 1)$ represents the probability that country $j$ makes an offer to firm $i$, through which the official's preference enters our estimation. On the other side, $Pr(A_{ij}) | S_{ik}$ is probability that firm $i$ will accept the offer from official $j$, \textit{given the offering set $O_k$}. The firm's preference is reflected in our estimation through this term.\footnote{The appendix shows how these terms are derived.}
+
+It is important to note that the offering set $O_k$ contains all offers that firm $i$ receives, only one of which is the observed match between firm $i$ and country $j$. The intuition is that if we observe the full set of offers that all officials make to all firms, then by looking at the final match we can see how firms and officials reject inferior offers and thus deduce their preferences.
+
+However, since the observed data only contains the final match, there is no information about the offers that firm $i$ receives but rejects, leading to the problem of incomplete data. To maximize the likelihood with incomplete data, we use the Expectation-Maximization (EM) algorithm, which runs as follows. First, we assume some arbitrary values for the parameters representing the actors' preference. Second, given these preferences, we fill in the missing data, i.e. the offers that we do not observe. After this step, we now have the full set of offers and can estimate the actors' preference again. These two steps constitute one iteration of the EM algorithm, which we repeat many times. 
+
+Under certain regularity conditions, met by the TSL, the EM algorithm is proven to increase the likelihood after each iteration \citep[152]{Logan1998}. We stop the algorithm when the likelihood no longer increases and keep the final set of parameter estimates.
+
+Depending on the starting values of the parameters, the EM algorithm may get stuck on a local maximum of the likelihood. Therefore, we will try multiple starting values and choose the one that leads to the highest likelihood.
+
+\subsubsection{Hypothesis and Operationalization}
+\label{sec:tsl_hypothesis}
+
+As before, I hypothesize that an official with a longer time horizon would prefer spillover over private benefits. First, I exploit the variation in time horizon among democratic governments, operationalized as the level of institutionalization of the party in power. Highly institutionalized parties are long-lasting and encompass multiple generations of politicians. Since the young generation of politicians have their entire career attached to the party label, they have a long time horizon and consider the long-term effect of the party's policy. Therefore, they are likely to pressure or bribe their senior colleagues, i.e. those with short time horizon, into choosing FDI based on its spillover effect. In contrast, weakly institutionalized parties tend to be short-lived, unable to attract young politicians, and thus have a short time horizon.\footnote{Making a similar argument, \citet{Blake2013} shows that highly institutionalized parties sign less rigid bilateral investment treaties because they want to maintain flexibility in case conditions change during their long future reign.} Therefore, I hypothesize that:
+
+\begin{hyp}
+Democratic governments ruled by highly institutionalized parties prefer FDI with spillover more than those ruled by weakly institutionalized parties.
+\end{hyp}
+
+I operationalize party institutionalization with the age of party, as measured by the Database of Political Institutions \citep{Keefer2002}. In a presidential system, I consider the president's party to the party in power.
+
+First, I exploit the variation in time horizon among autocratic governments, operationalized as the probability of staying in power. Unlike democracies, autocracies only have infrequent, if not violent, removal of leaders, leaving little chance for the political losers to regain office. Therefore, once the probability of staying in power is small, the leader's time horizon is severely shorted. I hypothesize that:
+
+\begin{hyp}
+Autocratic regimes with higher probabilities of staying in power prefer FDI with high spillover.
+\end{hyp}
+
+I measure the probability of staying in power as the predicted probability of regime survival in a duration model, similar to  \citet{Wright2008a}.
+
+Finally, to estimate the TSL model, we need data on the observed match between firms and countries / provinces, as well as their characteristics. I will use two datasets: 1) The Bureau of Economic Analysis' database of US Direct Investment Abroad (USDIA), and 2) Vietnam's Enterprize Census.
